--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Compiler files
 cache/
 out/build-info/
+out/*
 
 # Ignores development broadcast logs
 !/broadcast
 /broadcast/*/31337/
 /broadcast/*/11155111/
+broadcast/*/17000/
 /broadcast/**/dry-run/
 
 # Docs
