--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/hooks"]
 	path = lib/hooks
 	url = https://github.com/symbioticfi/hooks
+[submodule "lib/burners"]
+	path = lib/burners
+	url = https://github.com/symbioticfi/burners
