--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,7 @@ out/
 
 # Ignores development broadcast logs
 !/broadcast
-/broadcast/*/31337/
-/broadcast/*/11155111/
-broadcast/*/17000/
-/broadcast/**/dry-run/
+/broadcast/*
 
 # Docs
 docs/
